Remove box-sizing from global CSS to resolve margin issues

--- a/web/src/components/base/base.css
+++ b/web/src/components/base/base.css
@@ -1,6 +1,7 @@
 /* General Styling */
-/* Waarom wordt er in global styling aangemaakt dit is echt bad code practice en moet echt niet gebruikt worden binnen een project, dit veroorzaken weer css problemen */
+/* momenteel box sizing weg gehaalt omdat het voor marin problemen zorgt */
 * {
+    /* box-sizing: border-box; */
     margin: 0;
     padding: 0;
 }
